fixing attribution on small screens

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ p {
 	font-family: "Lexend Deca", sans-serif;
 	margin-bottom: 60px;
 	font-size: 15px;
-    line-height: 1.5;
+	line-height: 1.5;
 }
 
 h1 {
@@ -47,10 +47,10 @@ h1 {
 button {
 	padding: 10px;
 	border-radius: 20px;
-    margin-bottom: 10px;
+	margin-bottom: 10px;
 	border: none;
 	font-family: "Lexend Deca", sans-serif;
-    font-size: 15px;
+	font-size: 15px;
 }
 
 .sedans > button:active {
@@ -86,8 +86,13 @@ img {
 
 @media screen and (max-width: 900px) {
 	.container {
+		height: auto;
 		display: grid;
 		grid-template-columns: 370px;
 		grid-template-rows: repeat(3, 1fr);
+	}
+
+	.attribution {
+		padding: 10px;
 	}
 }
